added more drinks for the search bar

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 					<option value="Absolut Summertime">
 						<option value="Absolutely Fabulous">
 					<option value ="Absolutly Screwed Up">
-				<option value ="Absolutly Screwed Up">
+				<option value ="Bombay Cassis">
 				<option value ="Ace">
 				<option value ="Adam & Eve">
-				<option value ="Absolutly Screwed Up">
+				<option value ="Bora Bora">
 				<option value ="Addison">
 				<option value ="Addison Special">
 				<option value ="Adios Amigos Cocktail">
@@ -75,6 +75,7 @@
 				<option value ="Bijou">
 				<option value ="Blue Hurricane">
 				<option value ="Blueberry Mojito">
+					<option value ="Boulevardier">
 							
 						
 
