fixed reference error

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <html lang="en">
 	<head>
 		<head>
@@ -774,7 +775,7 @@
 				  </option>
 
 				</datalist>
-				<button type="button" name="button" class = "btn btn-primary btn-sm"  onclick="getDrinksByName('${strDrink}')">Get Cocktail</button>
+				<button type="button" name="button" class = "btn btn-primary btn-sm" >Get Cocktail</button>
 			</div>
 			  </form>
 				
